# ot-harjoitustyo

./: .coveragerc  .gitignore  README.md  pyproject.toml  tasks.py
docs/: architecture.md  changelog.md  software_requirements_specification.md  tests.md  time_log.md  user_guide.md
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/: kassapaate.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: hkl.md  monopoli.md
src/: build.py  database_connection.py  index.py  initialize_database.py
src/entities/: learningjourney.py  objective.py  objetive.py
src/repositories/: learning_journey_repository.py  objective_repository.py
src/services/: learning_journey_service.py  objective_service.py
src/tests/repositories/: learning_journey_repository_test.py  objective_repository_test.py
src/tests/services/: learning_journey_service_test.py  objective_service_test.py
src/ui/: ui.py
src/ui/views/: base_view.py  evaluate_view.py  home_view.py  manage_view.py  rename_objective_view.py
